[project]
name = "graphproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dgl==2.1.0+cu121",
    "mani-skill>=3.0.1",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "sapien>=3.0.3",
    "tensorboard>=2.20.0",
    "torch==2.1.0",
    "torchdata==0.7.0",
    "wandb>=0.27.2",
]
[tool.uv]
find-links = [
    "https://data.dgl.ai/wheels/cu121/repo.html" 
]
